Fix layout shift on project/region list page

--- a/src/app/components/shared/model-cards/card/card.component.scss
+++ b/src/app/components/shared/model-cards/card/card.component.scss
@@ -16,7 +16,7 @@
     border-bottom: var(--card-border);
 
     a {
-      display: inline-block;
+      display: block;
       width: auto;
       height: auto;
     }
